--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <p>Pouca Atividade Fisica = <span id="pouca"></span></p>
                     <p>Atividade Fisica Moderada = <span id="moderada"></span></p>
                     <p>Atividade fisica Intensa = <span id="intensa"></span></p>
-                    <p id="aviso">LEMBRANDO QUE SÃO RPOXIMADAMENTE O SEU GASTO CALORICO, PODE HAVER UMA VARIAÇÃO</p>
+                    <p id="aviso">LEMBRANDO QUE SÃO APROXIMADAMENTE O SEU GASTO CALORICO, PODE HAVER UMA VARIAÇÃO</p>
             
             </form>
 
